# hs-discord-bot

./: .gitignore  README.md  discord-bot.cabal  stack.yaml
src/: EventHandler.hs  Main.hs
